subdir('C')

gnome.yelp(meson.project_name(),
  sources: [
    'index.page',
    'create_classes.page',
    'memos.page',
    'exceptions.page',
    'day-off.page'
  ],
  media: ['pics/logo.svg',
  	'pics/screenshot-tt.png',
  	'pics/screenshot-seq.png',
  	'pics/new-classes.png',
  	'pics/new-classes-seq.png',
  	'pics/day-on-off.png',
  	'pics/memo.png',
  	'pics/star.png',
  	'pics/calendar.png',
  	'pics/ex-start.png',
  	'pics/ex-stop.png'
  	]
)
