datadir = join_paths('share', 'icons')
icondir = join_paths('hicolor', 'scalable', 'apps')
install_data (
    join_paths(icondir, 'de.uleutner.timetable.svg'),
    install_dir: join_paths(datadir, icondir)
)

icondir = join_paths('hicolor', 'symbolic', 'apps')

install_data (
    join_paths(icondir, 'de.uleutner.timetable-symbolic.svg'),
    install_dir: join_paths(datadir, icondir)
)

icondir = join_paths('hicolor', 'scalable', 'status')

install_data (
    join_paths(icondir, 'de.uleutner.star-orange.svg'),
    install_dir: join_paths(datadir, icondir)
)

install_data (
    join_paths(icondir, 'de.uleutner.star-grey.svg'),
    install_dir: join_paths(datadir, icondir)
)
